# permutations

./: .gitignore  CMakeLists.txt  README.md  cycleNotation.c  inwersjePermutacji.c  liczbaInwersji.c  orderOfPermutations.c  parzystoscPermutacji.c  pdfGenerator.sh  permutacje.c  permutationLimitChecker.c  permutationSquare.c  permutations.c  permutations.cpp  potenga.c  replikacje.txt  subsectionGenerator.sh  test.sh  text.txt
